[gd_scene load_steps=7 format=3 uid="uid://bpn8msqwjqemh"]

[ext_resource type="Theme" uid="uid://cqnnwflfspwe1" path="res://assets/gui/quest_book_theme.tres" id="1_ee5m8"]
[ext_resource type="Script" path="res://assets/gui/quest_panel.gd" id="1_gkq0r"]
[ext_resource type="Texture2D" uid="uid://c3i4cxv7yfgwo" path="res://assets/gui/imgs/quest-icon-open.png" id="3_ygcli"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aao3r"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.497753, 0.601563, 0.452704, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_34yi3"]
resource_name = "active"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Border:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r20f5"]
_data = {
"active": SubResource("Animation_34yi3")
}

[node name="QuestPanel" type="PanelContainer"]
custom_minimum_size = Vector2(280, 0)
theme = ExtResource("1_ee5m8")
script = ExtResource("1_gkq0r")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Space" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Space" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 10)
layout_mode = 2

[node name="StatusIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_ygcli")
stretch_mode = 2

[node name="Title" type="RichTextLabel" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.734375, 0.638168, 0.610524, 1)
text = "End the Tutorial
Next Line"
fit_content = true

[node name="ToggleDetails" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
size_flags_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(0.679688, 0.590645, 0.565059, 1)
theme_override_font_sizes/font_size = 9
text = "â–¼"

[node name="Space2" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(1, 10)
layout_mode = 2

[node name="Details" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Space4" type="Control" parent="VBoxContainer/Details"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Details"]
layout_mode = 2

[node name="Space" type="Control" parent="VBoxContainer/Details/HBoxContainer2"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="VBoxContainer/Details/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.617188, 0.510826, 0.481406, 1)
theme_override_constants/line_separation = -4
text = "As a verb, to check (off) means to add such a mark. Printed forms, printed documents, and computer software (see checkbox) commonly include squares in which to place check marks."
fit_content = true

[node name="Space2" type="Control" parent="VBoxContainer/Details/HBoxContainer2"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Space2" type="Control" parent="VBoxContainer/Details"]
visible = false
layout_mode = 2

[node name="PlanLabel" type="Label" parent="VBoxContainer/Details"]
layout_mode = 2
theme_override_colors/font_color = Color(0.652344, 0.468383, 0.4175, 1)
text = " Current plan:"
horizontal_alignment = 1

[node name="PlanContainer" type="HBoxContainer" parent="VBoxContainer/Details"]
layout_mode = 2

[node name="Space" type="Control" parent="VBoxContainer/Details/PlanContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Details/PlanContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Plan" type="RichTextLabel" parent="VBoxContainer/Details/PlanContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.512935, 0.500605, 0.609375, 1)
theme_override_constants/line_separation = -4
text = "1. Move around
2. Attack the enemy
3. Take a heart"
fit_content = true

[node name="Space2" type="Control" parent="VBoxContainer/Details/PlanContainer"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 2

[node name="Space3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Border" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aao3r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r20f5")
}

[connection signal="pressed" from="VBoxContainer/HBoxContainer/ToggleDetails" to="." method="_on_toggle_details_pressed"]
